IDEA-94505 Delete folder from Subversion 1.7 shouldn't prompt that directory will be deleted only after commit